Fix table overflowing

--- a/src/app/spotting/vehicle-type-container/spotting-table/spotting-table.component.scss
+++ b/src/app/spotting/vehicle-type-container/spotting-table/spotting-table.component.scss
@@ -43,3 +43,7 @@
     font-size: $devui-font-size-sm;
     font-style: italic;
 }
+
+d-panel-body {
+    overflow: hidden;
+}
